Add SpliType Linear.app Style Blur Effect

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "paths": {
       "$digerati/*": [
         "src/digerati/*"
+      ],
+      "$gym-med/*": [
+        "src/gym-med/*"
       ]
     },
     "types": [
