--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "split-type": "^0.3.4"
   },
   "engines": {
     "pnpm": ">=8"
