--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@finsweet/ts-utils": "^0.40.0",
+    "gsap": "^3.12.5",
     "split-type": "^0.3.4"
   },
   "engines": {
