--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0",
-    "gsap": "^3.12.5",
-    "split-type": "^0.3.4"
+    "@finsweet/ts-utils": "^0.40.0"
   },
   "engines": {
     "pnpm": ">=8"
